[package]
name = "gist"
version = "0.1.0"
edition = "2024"
description = "GitHub Gist CLI"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
indicatif = "0.18"
anstream = "0.6"
anstyle = "1"
ratatui = "0.30"
crossterm = "0.28"
tui-term = "0.3"
vt100 = "0.16"
portable-pty = "0.9"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
